# caliper

./: .gitignore  .gitmodules  ATTENTION_DEMO.md  BUILD.md  CMakeLists.txt  README.md  SETUP_GUIDE.md  cuda_test.cpp  imgui.ini  init-submodules.bat  init-submodules.sh  main.cpp
cmake/: Dependencies.cmake
cmake/wrappers/: glew_CMakeLists.txt  imgui_CMakeLists.txt  implot3d_CMakeLists.txt  implot_CMakeLists.txt
cmake/wrappers/glew/: CMakeLists.txt
cmake/wrappers/imgui/: CMakeLists.txt
cmake/wrappers/implot/: CMakeLists.txt
cmake/wrappers/implot3d/: CMakeLists.txt
scripts/: build-glfw-macos.sh  build-imgui-macos.sh  build-implot-macos.sh  build-libtorch-macos.sh
src/: dataset.cpp  dataset.h  intro_screen.cpp  intro_screen.h  main.cpp
